second commit for my protfolio

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="headerimage">
-        <img src="profile.png" alt="My Picture" />
+        <img src="profile.jpg" alt="My Picture" />
       </div>
     </section>
   </header>
@@ -132,14 +132,7 @@
             This project improved my understanding of control statements and functions.
           </p>
         </div>
-        <div class="card project-card">
-          <h3>Number Guessing Game (Python)</h3>
-          <p>
-            A small Python game where the user has to guess a randomly generated number within
-            a limited number of attempts. Through this project, I practised using loops,
-            conditionals, and random number generation in Python.
-          </p>
-        </div>
+        
       </div>
     </section>
 
