Changed the names to appropriate schemes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Gautam Arora | Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
   <meta name="description" content="My Portfolio Website as a first-year CSE student at Delhi Technological University, Delhi." />
-  <link type="image/x-icon" href="download.png" rel="icon"/>
+  <link type="image/x-icon" href="favicon.png" rel="icon"/>
 </head>
 <body>
   <header id="home">
